--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,9 @@ background: #eee;
  margin-top:150px;
  margin-bottom:20px;
 }
+div {
+ margin-bottom:15px;
+}
 .se-input {
 height:30px;
 border-radius: 30px;
@@ -15,6 +18,7 @@ outline: none;
 background: #eee;
 margin-top: 5px;
 border: 2px solid gray;
+padding-left:15px;
 }
 
 select#se-idx {
@@ -51,13 +55,13 @@ div#loading {
   table-layout: fixed;
 }
 
-#customers td, #customers th {
-  border: 1px solid #3373c4;
+#customers td div {
   padding: 8px;
-  width: 100px;
+  width: 120px;
   height: 50px;
   overflow: hidden;
 }
+
 
 #customers tbody {
  height: 500px;
@@ -67,15 +71,6 @@ div#loading {
 #customers tr:nth-child(even){background-color: #f2f2f2;}
 
 #customers tr:hover {background-color: #ddd;}
-
-#customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  color: #3373c4;
-  width: 100px;
-  overflow: hidden;
-}
 
 button {
   width:120px; /* or whatever */
@@ -90,4 +85,26 @@ button {
 
 button:hover {
 cursor: pointer;
+}
+td {
+  border: 1px solid black;
+  width: 120px;
+
+  max-height:70px;
+  white-space: pre-wrap;        /* css */
+  white-space: -moz-pre-wrap;   /* Mozilla */
+  white-space: -pre-wrap;       /* Chrome*/
+  white-space: -o-pre-wrap;     /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+  overflow:hidden;
+}
+
+th {
+  border: 1px solid black;
+  padding-left:12px;
+  text-align: left;
+  color: #3373c4;
+  width: 120px;
+  height:70px;
+
 }
